--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,11 @@
 <body>
 
 <h1>Human Computer Interaction - HUMCOM1 IAA1</h1>
-<h3>by: Jayson Delos Santos </h3>
-<h3>January 25 2022 </h3>
+<h2>by: Jayson Delos Santos </h2>
+<h3>First Year</h3>
+<h4>BSCS</h4>
+<h5>Baguio City</h5>
+<h6>January 25 2022 </h6>
 <p>This is a sample web page</p>
 </body>
 </html>
